--- a/src/Handlebars.WebApi/packages.config
+++ b/src/Handlebars.WebApi/packages.config
@@ -35,6 +35,9 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="1.0.1" targetFramework="net462" />
   <package id="Microsoft.AspNetCore.TestHost" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net462" />
+  <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="net462" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net462" />
@@ -73,6 +76,9 @@
   <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Console" version="4.0.0" targetFramework="net461" />
+  <package id="System.Data.HashFunction.Core.Net40Async" version="1.8.2.2" targetFramework="net462" />
+  <package id="System.Data.HashFunction.Interfaces" version="1.0.0.2" targetFramework="net462" />
+  <package id="System.Data.HashFunction.MurmurHash.Net40Async" version="1.8.2.2" targetFramework="net462" />
   <package id="System.Diagnostics.Contracts" version="4.0.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
